--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,12 @@
 <div class="wrapper">
-  <h1 class="title">Kammryn Dancy</h1>
+  <a routerLink="/home" routerLinkActive="active" ariaCurrentWhenActive="page"><h1 class="title">Kammryn Dancy</h1></a>
   <nav>
     <a routerLink="/brewing" routerLinkActive="active" ariaCurrentWhenActive="page">TinLion Brewing</a>
     <a routerLink="/woodwork" routerLinkActive="active" ariaCurrentWhenActive="page">Woodworking</a>
     <a routerLink="/whiskey" routerLinkActive="active" ariaCurrentWhenActive="page">Whiskey</a>
     <a routerLink="/roaster" routerLinkActive="active" ariaCurrentWhenActive="page">TinLion Roastery</a>
-    <a [routerLink]="[{ outlets: { popup: ['compose'] } }]">Contact</a>
+    <a routerLink="/DND" routerLinkActive="active" ariaCurrentWhenActive="page">DnD Campaigns</a>
+<!--    <a [routerLink]="[{ outlets: { popup: ['compose'] } }]">Contact</a>-->
   </nav>
   <div [@routeAnimation]="getRouteAnimationData()">
     <router-outlet></router-outlet>
