Spec file update

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <a routerLink="/home" routerLinkActive="active" ariaCurrentWhenActive="page"><h1 class="title">Kammryn Dancy</h1></a>
+  <a routerLink="/home" routerLinkActive="active" ariaCurrentWhenActive="page"><h1 class="title">{{ title }}</h1></a>
   <nav>
     <a routerLink="/brewing" routerLinkActive="active" ariaCurrentWhenActive="page">TinLion Brewing</a>
     <a routerLink="/woodwork" routerLinkActive="active" ariaCurrentWhenActive="page">Woodworking</a>
