--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,55 @@
-<div class="wrapper">
-  <a routerLink="/home" routerLinkActive="active" ariaCurrentWhenActive="page"><h1 class="title">{{ title }}</h1></a>
-  <nav>
-    <a routerLink="/brewing" routerLinkActive="active" ariaCurrentWhenActive="page">TinLion Brewing</a>
-    <a routerLink="/woodwork" routerLinkActive="active" ariaCurrentWhenActive="page">Woodworking</a>
-    <a routerLink="/whiskey" routerLinkActive="active" ariaCurrentWhenActive="page">Whiskey</a>
-    <a routerLink="/roaster" routerLinkActive="active" ariaCurrentWhenActive="page">TinLion Roastery</a>
-    <a routerLink="/DND" routerLinkActive="active" ariaCurrentWhenActive="page">DnD Campaigns</a>
-<!--    <a [routerLink]="[{ outlets: { popup: ['compose'] } }]">Contact</a>-->
-  </nav>
+<header>
+  <div class="header">
+    <div class="container-fluid">
+      <div class="row d_flex">
+        <div class=" col-md-2 col-sm-3 col logo_section">
+          <div class="full">
+            <div class="center-desk">
+              <div class="logo">
+                <a routerLink="/home" routerLinkActive="active" ariaCurrentWhenActive="page">
+                  <img ngSrc="assets/images/tinlion_logo_3.png" height="100" width="170" alt="TinLion"/>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-8 col-sm-9">
+          <nav class="navigation navbar navbar-expand-md navbar-dark">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarsExample04">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                  <a class="nav-link" routerLink="/brewing" routerLinkActive="active" ariaCurrentWhenActive="page">Tinlion Brewing</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" routerLink="/woodwork" routerLinkActive="active" ariaCurrentWhenActive="page">Woodworking</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" routerLink="/whiskey" routerLinkActive="active" ariaCurrentWhenActive="page">Whiskey</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" routerLink="/roaster" routerLinkActive="active" ariaCurrentWhenActive="page">TinLion Roastery</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" routerLink="/DND" routerLinkActive="active" ariaCurrentWhenActive="page">DnD Campaigns</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        </div>
+        <div class="col-md-2 d_none">
+          <ul class="email text_align_right">
+            <li> <a href="Javascript:void(0)"> Login </a></li>
+            <li> <a href="Javascript:void(0)"> <i class="fa fa-search" style="cursor: pointer;" aria-hidden="true"> </i></a> </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</header>
+<div>
   <div [@routeAnimation]="getRouteAnimationData()">
     <router-outlet></router-outlet>
   </div>
