Update scripts ref, basic appearance update

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,11 +6,14 @@
       </div>
       <div class="collapse navbar-collapse" id="agency-navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
+          <li routerLink="/home" routerLinkActive="active">
+            <a class="nav-link" routerLink="/home" routerLinkActive="active" ariaCurrentWhenActive="page">Home</a>
+          </li>
           <li routerLink="/brewing" routerLinkActive="active">
             <a class="nav-link" routerLink="/brewing" routerLinkActive="active" ariaCurrentWhenActive="page">Brewing</a>
           </li>
-          <li routerLink="/woodwork" routerLinkActive="active">
-            <a class="nav-link" routerLink="/woodwork" routerLinkActive="active" ariaCurrentWhenActive="page">Woodworking</a>
+          <li routerLink="/woodwork" routerLinkActive="dark">
+            <a class="nav-link" routerLink="/woodwork" routerLinkActive="dark" ariaCurrentWhenActive="page">Woodworking</a>
           </li>
           <li routerLink="/spirits" routerLinkActive="active">
             <a class="nav-link" routerLink="/spirits" routerLinkActive="active" ariaCurrentWhenActive="page">Spirits</a>
