--- a/src/app/brewing/brewing.component.html
+++ b/src/app/brewing/brewing.component.html
@@ -1,2 +1,2 @@
-<landing greeting="Looking for a cold one?" message="Sorry the page/brew is not finished yet check back later." alarm="Request a Brew"/>
+<landing greeting="Looking for a cold one?" message="Sorry the page/brew is not finished yet check back later." noticeButton="Request a Brew" imageId="/assets/images/landings/larch_valley.jpg"/>
 <footerComp/>
