--- a/src/app/components/base/base.component.html
+++ b/src/app/components/base/base.component.html
@@ -3,10 +3,10 @@
     <div class="row">
       <div class="col-sm-5">
         <h2>TinLion more than a name</h2>
-        <p>Responsive Web design is the approach that suggests that design and development should respond to the user's behavior and environment based on screen size, platform and orientation. The practice consists of a mix of flexible grids and layouts, images and an intelligent use of CSS media queries</p>
+        <p>These two little dudes are Tintin and Lionel our first two fur babies, and are the source of the TinLion name. A title I use as an umbrella which all my products fall under. The TinLion logo was designed thinking of our Tin man and Lion from the Land of Oz.</p>
       </div>
       <div class="col-sm-7 hidden-xs">
-        <img src="assets/images/winter-forest.jpg" alt="">
+        <img src="assets/images/tintin_lionel.jpg" alt="">
       </div>
     </div>
   </div>
