--- a/src/app/components/landing/landing.component.scss
+++ b/src/app/components/landing/landing.component.scss
@@ -1,6 +1,6 @@
 $color_1: #26272d;
 $color_2: #fff;
-$color_3: #6fc754;
+$color_3: #51c03d;
 $background-color_1: rgba(255,255,255,0.5);
 $background-color_2: transparent;
 $background-color_3: #26272d;
@@ -9,7 +9,6 @@ $background-color_4: rgba(38,39,45,0.5);
 /* landing
 ================================================== */
 .landing {
-  background: url(/assets/images/green-forest.jpg) no-repeat center / cover;
   height: 100%;
   width: 100%;
   display: table;
