--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
-<landing greeting="Is he a dumbass?" message="Can you think of a better adjective, or perhaps you have anecdotes proving yes." alarm="Contact his Handler"/>
+<landing greeting="Is he a knuckle head?" message="Can you think of a better adjective, or perhaps you have anecdotes proving yes." noticeButton="Contact his Handler" imageId="/assets/images/landings/green-forest.jpg"/>
 <main id="main" class="site-main">
     <basicComp/>
-    <services/>
+    <hobbies/>
     <mapComp/>
     <portfolio/>
 </main>
