--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,2 +1,2 @@
-<landing greeting="Page Not Found" message="How did you end up here, are you being a neredowell." alarm="Sound the Alarm"/>
+<landing greeting="Page Not Found" message="How did you end up here, are you being a neredowell." noticeButton="Sound the Alarm" imageId="/assets/images/landings/dead_forest.jpg"/>
 <footerComp/>
