--- a/src/app/roaster/roaster.component.html
+++ b/src/app/roaster/roaster.component.html
@@ -1,2 +1,2 @@
-<landing greeting="Dark, Rich, Earthy" message="Sorry the coffee/page is still steeping check back later." alarm="Boil the Kettle"/>
+<landing greeting="Dark, Rich, Earthy" message="Sorry the coffee/page is still steeping check back later." noticeButton="Boil the Kettle" imageId="/assets/images/landings/river.jpg"/>
 <footerComp/>
