--- a/src/app/spirits/spirits.component.html
+++ b/src/app/spirits/spirits.component.html
@@ -1,2 +1,2 @@
-<landing greeting="Burns so good" message="Sorry the still/page is not up to temperature yet check back later." alarm="Whiskey, neat"/>
+<landing greeting="Burns so good" message="Sorry the still/page is not up to temperature yet check back later." noticeButton="Whiskey, neat" imageId="/assets/images/landings/tree_bark.jpg"/>
 <footerComp/>
