--- a/src/app/woodwork/woodworking.component.html
+++ b/src/app/woodwork/woodworking.component.html
@@ -1,2 +1,2 @@
-<landing greeting="Smelling saw dust?" message="Sorry the glue/page is not set yet check back later." alarm="Knock on Wood"/>
+<landing greeting="Smelling saw dust?" message="Sorry the glue/page is not set yet check back later." noticeButton="Knock on Wood" imageId="/assets/images/landings/glacier_lake.jpg"/>
 <footerComp/>
