--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,9 +1,9 @@
-<div id="landing" class="landing overlay">
+<div id="landing" class="landing overlay" [ngStyle]="AddBackgroundCssStyle(imageId)">
   <div class="landing-content">
     <div class="landing-text">
       <h1>{{greeting}}</h1>
       <p>{{message}}</p>
-      <a href="#" class="btn btn-border">{{alarm}}</a>
+      <a href="#" class="btn btn-border">{{noticeButton}}</a>
     </div>
   </div>
 </div>
