--- a/src/app/components/map/map.component.scss
+++ b/src/app/components/map/map.component.scss
@@ -4,7 +4,7 @@ $color_2: #0960d7;
 /* Section: Map Feature */
 .section-map-feature {
   padding-top: 250px;
-  background: #071021 url(/assets/images/map.png) no-repeat top center / cover;
+  background: #1b3b0e url(/assets/images/map.png) no-repeat top center / cover;
   h2 {
     padding-bottom: 30px;
     margin: 0;
