--- a/src/app/dnd/dnd.component.html
+++ b/src/app/dnd/dnd.component.html
@@ -1,2 +1,2 @@
-<landing greeting="Roll for Hit" message="Sorry the roll/page is a crit fail check back later." alarm="Dice Jail"/>
+<landing greeting="Roll for Hit" message="Sorry the roll/page is a crit fail check back later." noticeButton="Dice Jail" imageId="/assets/images/landings/banff_clouds.jpg"/>
 <footerComp/>
