--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 $color_1: #9fa3a7;
-$color_2: #6fc754;
+$color_2: #51c03d;
 $color_3: #26292c;
 $color_4: #26272d;
 $color_5: #fff;
@@ -10,9 +10,9 @@ $font-family_1: 'FontAwesome';
 $font-family_2: "FontAwesome";
 $font-family_3: 'Montserrat', sans-serif;
 $background-color_1: #fff;
-$background-color_2: #267df4;
+$background-color_2: #60a14d;
 $background-color_3: #f5f5f8;
-$background-color_4: #6fc754;
+$background-color_4: #51c03d;
 $background-color_5: #26272d;
 $background-color_6: #ddd;
 $background-color_7: transparent;
@@ -94,10 +94,10 @@ h5 {
 .btn-border {
   border: 1px solid $color_5;
   &:hover {
-    border: 1px solid $color_6;
+    border: 1px solid $background-color_5;
   }
   &:focus {
-    border: 1px solid $color_6;
+    border: 1px solid $background-color_5;
   }
 }
 .btn-fill {
@@ -841,7 +841,7 @@ body {
 }
 /* site-section */
 .site-section {
-  padding: 100px 0 140px;
+  padding: 60px 0 140px;
 }
 .subheading-text {
   font-size: 20px;
