Add photography section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,9 @@
           <li routerLink="/home" routerLinkActive="active">
             <a class="nav-link" routerLink="/home" routerLinkActive="active" ariaCurrentWhenActive="page">Home</a>
           </li>
+          <li routerLink="/photography" routerLinkActive="active">
+            <a class="nav-link" routerLink="/photography" routerLinkActive="active" ariaCurrentWhenActive="page">Photography</a>
+          </li>
           <li routerLink="/brewing" routerLinkActive="active">
             <a class="nav-link" routerLink="/brewing" routerLinkActive="active" ariaCurrentWhenActive="page">Brewing</a>
           </li>
