--- a/src/app/components/services/hobbies.component.html
+++ b/src/app/components/services/hobbies.component.html
@@ -1,7 +1,7 @@
 <section class="site-section section-services gray-bg text-center">
   <div class="container">
     <h2 class="heading-separator">Serial Hobbying</h2>
-    <p class="subheading-text">Roasting monday, Editing wednesday, DnD thursday, Brewing saturday, Repeat</p>
+    <p class="subheading-text">Roasting monday, Editing wednesday, DnD thursday, Brewing saturday, Shuffle, Repeat</p>
     <div class="row">
       <div class="col-md-3 col-xs-6">
         <div class="service">
