DEVEX-1481 Fix broken link, styles

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -3,7 +3,7 @@
     <div class="landing-text">
       <h1>{{greeting}}</h1>
       <p>{{message}}</p>
-      <a href="#" class="btn btn-border">{{noticeButton}}</a>
+      <a class="btn btn-border">{{noticeButton}}</a>
     </div>
   </div>
 </div>
