--- a/src/app/components/photogrpahy/photoexamples.component.html
+++ b/src/app/components/photogrpahy/photoexamples.component.html
@@ -10,175 +10,175 @@
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
         <div class="portfolio-item">
           <img src="/assets/images/portfolio/tintin_lionel-1.jpg" class="img-res" alt="">
-          <h4 class="portfolio-item-title">Portfolio item</h4>
-          <a href="portfolio-item.html"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-        </div><!-- /.portfolio-item -->
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/tintin_lionel-1.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["dogs"]'>
         <div class="portfolio-item">
           <img src="/assets/images/portfolio/alfie.jpg" class="img-res" alt="">
-          <h4 class="portfolio-item-title">Portfolio item</h4>
-          <a href="portfolio-item.html"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-        </div><!-- /.portfolio-item -->
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/alfie.jpg" target="_blank" target="_blank" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
         <div class="portfolio-item">
           <img src="/assets/images/portfolio/lionel-4.jpg" class="img-res" alt="">
-          <h4 class="portfolio-item-title">Portfolio item</h4>
-          <a href="portfolio-item.html"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-        </div><!-- /.portfolio-item -->
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/lionel-4.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["rest"]'>
         <div class="portfolio-item">
           <img src="/assets/images/portfolio/hummingbird-1.JPG" class="img-res" alt="">
-          <h4 class="portfolio-item-title">Portfolio item</h4>
-          <a href="portfolio-item.html"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-        </div><!-- /.portfolio-item -->
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/hummingbird-1.JPG" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["dogs"]'>
         <div class="portfolio-item">
           <img src="/assets/images/portfolio/blue-1.jpg" class="img-res" alt="">
-          <h4 class="portfolio-item-title">Portfolio item</h4>
-          <a href="portfolio-item.html"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-        </div><!-- /.portfolio-item -->
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/blue-1.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["rest"]'>
         <div class="portfolio-item">
           <img src="/assets/images/portfolio/mallard-1.JPG" class="img-res" alt="">
-          <h4 class="portfolio-item-title">Portfolio item</h4>
-          <a href="portfolio-item.html"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-        </div><!-- /.portfolio-item -->
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/mallard-1.JPG" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
         <div class="portfolio-item">
           <img src="/assets/images/portfolio/tintin-1.jpg" class="img-res" alt="">
-          <h4 class="portfolio-item-title">Portfolio item</h4>
-          <a href="portfolio-item.html"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-        </div><!-- /.portfolio-item -->
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/tintin-1.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["dogs"]'>
         <div class="portfolio-item">
           <img src="/assets/images/portfolio/alfie-6.jpg" class="img-res" alt="">
-          <h4 class="portfolio-item-title">Portfolio item</h4>
-          <a href="portfolio-item.html"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-        </div><!-- /.portfolio-item -->
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/alfie-6.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
         <div class="portfolio-item">
           <img src="/assets/images/portfolio/lionel-6.jpg" class="img-res" alt="">
-          <h4 class="portfolio-item-title">Portfolio item</h4>
-          <a href="portfolio-item.html"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-        </div><!-- /.portfolio-item -->
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/lionel-6.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["dogs"]'>
         <div class="portfolio-item">
           <img src="/assets/images/portfolio/alfie-11.jpg" class="img-res" alt="">
-          <h4 class="portfolio-item-title">Portfolio item</h4>
-          <a href="portfolio-item.html"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-        </div><!-- /.portfolio-item -->
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/alfie-11.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
         <div class="portfolio-item">
           <img src="/assets/images/portfolio/tintin_lionel-5.jpg" class="img-res" alt="">
-          <h4 class="portfolio-item-title">Portfolio item</h4>
-          <a href="portfolio-item.html"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-        </div><!-- /.portfolio-item -->
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/tintin_lionel-5.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
         <div class="portfolio-item">
           <img src="/assets/images/portfolio/luna-1.jpg" class="img-res" alt="">
-          <h4 class="portfolio-item-title">Portfolio item</h4>
-          <a href="portfolio-item.html"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-        </div><!-- /.portfolio-item -->
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/luna-1.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["dogs"]'>
         <div class="portfolio-item">
           <img src="/assets/images/portfolio/alfie-4.jpg" class="img-res" alt="">
-          <h4 class="portfolio-item-title">Portfolio item</h4>
-          <a href="portfolio-item.html"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-        </div><!-- /.portfolio-item -->
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/alfie-4.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
         <div class="portfolio-item">
           <img src="/assets/images/portfolio/tintin-2.jpg" class="img-res" alt="">
-          <h4 class="portfolio-item-title">Portfolio item</h4>
-          <a href="portfolio-item.html"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-        </div><!-- /.portfolio-item -->
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/tintin-2.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["dogs"]'>
         <div class="portfolio-item">
           <img src="/assets/images/portfolio/alfie-10.jpg" class="img-res" alt="">
-          <h4 class="portfolio-item-title">Portfolio item</h4>
-          <a href="portfolio-item.html"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-        </div><!-- /.portfolio-item -->
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/alfie-10.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
         <div class="portfolio-item">
           <img src="/assets/images/portfolio/lionel-3.jpg" class="img-res" alt="">
-          <h4 class="portfolio-item-title">Portfolio item</h4>
-          <a href="portfolio-item.html"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-        </div><!-- /.portfolio-item -->
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/lionel-3.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
         <div class="portfolio-item">
           <img src="/assets/images/portfolio/tintin-3.jpg" class="img-res" alt="">
-          <h4 class="portfolio-item-title">Portfolio item</h4>
-          <a href="portfolio-item.html"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-        </div><!-- /.portfolio-item -->
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/tintin-3.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["rest"]'>
         <div class="portfolio-item">
           <img src="/assets/images/portfolio/hummingbird-3.JPG" class="img-res" alt="">
-          <h4 class="portfolio-item-title">Portfolio item</h4>
-          <a href="portfolio-item.html"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-        </div><!-- /.portfolio-item -->
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/hummingbird-3.JPG" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
         <div class="portfolio-item">
           <img src="/assets/images/portfolio/tintin_lionel-6.jpg" class="img-res" alt="">
-          <h4 class="portfolio-item-title">Portfolio item</h4>
-          <a href="portfolio-item.html"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-        </div><!-- /.portfolio-item -->
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/tintin_lionel-6.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["dogs"]'>
         <div class="portfolio-item">
           <img src="/assets/images/portfolio/alfie-7.jpg" class="img-res" alt="">
-          <h4 class="portfolio-item-title">Portfolio item</h4>
-          <a href="portfolio-item.html"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-        </div><!-- /.portfolio-item -->
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/alfie-7.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["dogs"]'>
         <div class="portfolio-item">
           <img src="/assets/images/portfolio/alfie-9.jpg" class="img-res" alt="">
-          <h4 class="portfolio-item-title">Portfolio item</h4>
-          <a href="portfolio-item.html"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-        </div><!-- /.portfolio-item -->
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/alfie-9.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
         <div class="portfolio-item">
           <img src="/assets/images/portfolio/tintin_lionel-2.jpg" class="img-res" alt="">
-          <h4 class="portfolio-item-title">Portfolio item</h4>
-          <a href="portfolio-item.html"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-        </div><!-- /.portfolio-item -->
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/tintin_lionel-2.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["dogs"]'>
         <div class="portfolio-item">
           <img src="/assets/images/portfolio/alfie-2.jpg" class="img-res" alt="">
-          <h4 class="portfolio-item-title">Portfolio item</h4>
-          <a href="portfolio-item.html"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-        </div><!-- /.portfolio-item -->
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/alfie-2.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
         <div class="portfolio-item">
           <img src="/assets/images/portfolio/lionel-2.jpg" class="img-res" alt="">
-          <h4 class="portfolio-item-title">Portfolio item</h4>
-          <a href="portfolio-item.html"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-        </div><!-- /.portfolio-item -->
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/lionel-2.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
       </div>
 
     </div>
     <div class="text-center">
-      <a class="btn btn-gray" href="#" id="loadMore">Load More</a>
+      <a class="btn btn-gray" href="" id="loadMore">Load More</a>
     </div>
   </div>
 </section>
