--- a/src/app/components/photogrpahy/photoexamples.component.html
+++ b/src/app/components/photogrpahy/photoexamples.component.html
@@ -28,11 +28,26 @@
           <a href="/assets/images/portfolio/lionel-4.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
         </div>
       </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["dogs"]'>
+        <div class="portfolio-item">
+          <img src="/assets/images/portfolio/thumper-1.JPG" class="img-res" alt="">
+          <h4 class="portfolio-item-title">Adopt Me</h4>
+<!--          <a href="/assets/images/portfolio/thumper-1.JPG" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>-->
+          <a href="https://arf.ab.ca/animal/5507m-thumper/" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["rest"]'>
         <div class="portfolio-item">
           <img src="/assets/images/portfolio/hummingbird-1.JPG" class="img-res" alt="">
           <h4 class="portfolio-item-title">View Image</h4>
           <a href="/assets/images/portfolio/hummingbird-1.JPG" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
+        <div class="portfolio-item">
+          <img src="/assets/images/portfolio/glyndwr-1.jpg" class="img-res" alt="">
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/lionel-6.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["dogs"]'>
@@ -51,9 +66,23 @@
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
         <div class="portfolio-item">
+          <img src="/assets/images/portfolio/sahara-1.jpg" class="img-res" alt="">
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/sahara-1.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
+        <div class="portfolio-item">
           <img src="/assets/images/portfolio/tintin-1.jpg" class="img-res" alt="">
           <h4 class="portfolio-item-title">View Image</h4>
           <a href="/assets/images/portfolio/tintin-1.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
+        <div class="portfolio-item">
+          <img src="/assets/images/portfolio/bethany-1.jpg" class="img-res" alt="">
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/bethany-1.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["dogs"]'>
@@ -70,11 +99,32 @@
           <a href="/assets/images/portfolio/lionel-6.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
         </div>
       </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
+        <div class="portfolio-item">
+          <img src="/assets/images/portfolio/soleil-1.jpg" class="img-res" alt="">
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/soleil-1.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
+        <div class="portfolio-item">
+          <img src="/assets/images/portfolio/twigg-1.jpg" class="img-res" alt="">
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/twigg-1.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["dogs"]'>
         <div class="portfolio-item">
           <img src="/assets/images/portfolio/alfie-11.jpg" class="img-res" alt="">
           <h4 class="portfolio-item-title">View Image</h4>
           <a href="/assets/images/portfolio/alfie-11.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
+        <div class="portfolio-item">
+          <img src="/assets/images/portfolio/katashi-1.jpg" class="img-res" alt="">
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/katashi-1.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
@@ -86,6 +136,13 @@
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
         <div class="portfolio-item">
+          <img src="/assets/images/portfolio/bethany-2.jpg" class="img-res" alt="">
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/bethany-2.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
+        <div class="portfolio-item">
           <img src="/assets/images/portfolio/luna-1.jpg" class="img-res" alt="">
           <h4 class="portfolio-item-title">View Image</h4>
           <a href="/assets/images/portfolio/luna-1.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
@@ -93,9 +150,31 @@
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["dogs"]'>
         <div class="portfolio-item">
+          <img src="/assets/images/portfolio/thumper-2.JPG" class="img-res" alt="">
+          <h4 class="portfolio-item-title">Adopt Me</h4>
+<!--          <a href="/assets/images/portfolio/thumper-2.JPG" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>-->
+          <a href="https://arf.ab.ca/animal/5507m-thumper/" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["dogs"]'>
+        <div class="portfolio-item">
           <img src="/assets/images/portfolio/alfie-4.jpg" class="img-res" alt="">
           <h4 class="portfolio-item-title">View Image</h4>
           <a href="/assets/images/portfolio/alfie-4.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
+        <div class="portfolio-item">
+          <img src="/assets/images/portfolio/sahara-2.jpg" class="img-res" alt="">
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/sahara-2.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
+        <div class="portfolio-item">
+          <img src="/assets/images/portfolio/glyndwr-2.jpg" class="img-res" alt="">
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/kammryndancy/src/assets/images/portfolio/glyndwr-2.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
@@ -114,6 +193,20 @@
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
         <div class="portfolio-item">
+          <img src="/assets/images/portfolio/twigg-2.jpg" class="img-res" alt="">
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/twigg-2.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
+        <div class="portfolio-item">
+          <img src="/assets/images/portfolio/soleil-2.jpg" class="img-res" alt="">
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/soleil-2.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
+        <div class="portfolio-item">
           <img src="/assets/images/portfolio/lionel-3.jpg" class="img-res" alt="">
           <h4 class="portfolio-item-title">View Image</h4>
           <a href="/assets/images/portfolio/lionel-3.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
@@ -124,6 +217,13 @@
           <img src="/assets/images/portfolio/tintin-3.jpg" class="img-res" alt="">
           <h4 class="portfolio-item-title">View Image</h4>
           <a href="/assets/images/portfolio/tintin-3.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
+        <div class="portfolio-item">
+          <img src="/assets/images/portfolio/katashi-2.jpg" class="img-res" alt="">
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/katashi-2.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["rest"]'>
@@ -147,6 +247,13 @@
           <a href="/assets/images/portfolio/alfie-7.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
         </div>
       </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
+        <div class="portfolio-item">
+          <img src="/assets/images/portfolio/sahara-3.jpg" class="img-res" alt="">
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/sahara-3.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["dogs"]'>
         <div class="portfolio-item">
           <img src="/assets/images/portfolio/alfie-9.jpg" class="img-res" alt="">
@@ -156,9 +263,23 @@
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
         <div class="portfolio-item">
+          <img src="/assets/images/portfolio/twigg-3.jpg" class="img-res" alt="">
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/twigg-3.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
+        <div class="portfolio-item">
           <img src="/assets/images/portfolio/tintin_lionel-2.jpg" class="img-res" alt="">
           <h4 class="portfolio-item-title">View Image</h4>
           <a href="/assets/images/portfolio/tintin_lionel-2.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
+        <div class="portfolio-item">
+          <img src="/assets/images/portfolio/glyndwr-3.jpg" class="img-res" alt="">
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/glyndwr-3.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["dogs"]'>
@@ -173,6 +294,22 @@
           <img src="/assets/images/portfolio/lionel-2.jpg" class="img-res" alt="">
           <h4 class="portfolio-item-title">View Image</h4>
           <a href="/assets/images/portfolio/lionel-2.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["dogs"]'>
+        <div class="portfolio-item">
+          <img src="/assets/images/portfolio/thumper-3.JPG" class="img-res" alt="">
+          <h4 class="portfolio-item-title">Adopt Me</h4>
+          <p class="portfolio-item-title">My Name's Thumper</p>
+<!--          <a href="/assets/images/portfolio/thumper-3.JPG" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>-->
+          <a href="https://arf.ab.ca/animal/5507m-thumper/" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
+        <div class="portfolio-item">
+          <img src="/assets/images/portfolio/katashi-3.jpg" class="img-res" alt="">
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/katashi-3.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
         </div>
       </div>
 
